--- a/01-newbie/social-proof-section/style.css
+++ b/01-newbie/social-proof-section/style.css
@@ -52,43 +52,48 @@ body {
 }
 
 .container {
-  width: 80rem;
+  width: 71rem;
   height: 75vh;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  transition: all .5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 
+.social__advert {
+  padding-top: 1rem;
+}
 .social__ratings {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 1.3rem;
-  transition: all .5s ease-in-out;
+  gap: 1rem;
+  transition: all 0.5s ease-in-out;
 }
 .social__reviews {
   grid-column: span 2;
   display: flex;
   gap: 2rem;
   margin-top: 2rem;
-  transition: all .5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 
 .social__advert--heading {
   color: var(--very-dark-magenta);
-  font-size: 3.5rem;
+  font-size: 3.2rem;
+  font-weight: 700;
   margin-right: 9rem;
   margin-bottom: 1.5rem;
 }
 .social__advert--text {
   color: var(--dark-grayish-magenta);
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   line-height: 1.5rem;
   margin-right: 10rem;
 }
 
 .ratings__card {
+  width: 29rem;
   background-color: var(--light-grayish-magenta);
   color: var(--very-dark-magenta);
   display: flex;
@@ -96,31 +101,30 @@ body {
   gap: 2rem;
   font-weight: bold;
   font-size: 1.1rem;
-  padding: 1.3rem 2.3rem;
+  padding: 1.3rem 2rem;
   border-radius: 0.5rem;
-  transition: all .5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 .ratings__card--stars img {
   width: 1.15rem;
   height: 1rem;
+  margin: 0 0.1rem;
 }
 .ratings__card:nth-child(1) {
   align-self: flex-start;
-  margin-left: 3rem;
 }
 .ratings__card:nth-child(2) {
   align-self: center;
 }
 .ratings__card:nth-child(3) {
   align-self: flex-end;
-  margin-right: 3rem;
 }
 
 .review__card {
   background-color: var(--very-dark-magenta);
   border-radius: 0.5rem;
-  padding: 1rem 2rem;
-  transition: all .5s ease-in-out;
+  padding: 0.5rem 1rem;
+  transition: all 0.5s ease-in-out;
 }
 .review__card:nth-child(1) {
   align-self: flex-start;
@@ -136,7 +140,7 @@ body {
   display: flex;
   align-items: center;
   gap: 1.3rem;
-  margin-top: 1.6rem;
+  margin: 1.6rem 1rem;
 }
 .review__card--image {
   border-radius: 50%;
@@ -161,10 +165,11 @@ body {
 }
 .review__card--text {
   color: var(--light-grayish-magenta);
-  font-size: 1.2rem;
+  font-size: 1rem;
+  font-weight: 500;
   line-height: 1.5rem;
   display: block;
-  margin: 1.6rem 1rem 1.6rem 0;
+  margin: 1.6rem 1rem;
 }
 .review__card--text::before {
   content: open-quote;
