change rem and vh to em social-proof-section

--- a/01-newbie/social-proof-section/style.css
+++ b/01-newbie/social-proof-section/style.css
@@ -52,8 +52,8 @@ body {
 }
 
 .container {
-  width: 71rem;
-  height: 75vh;
+  width: 85em;
+  height: 46em;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr);
